@@ -4,6 +4,7 @@ import build.percolate.core.ModuleGraphClassifier;
 import org.junit.jupiter.api.Test;
 
 import java.io.File;
+import java.lang.reflect.Field;
 import java.nio.file.Path;
 import java.util.List;
 
@@ -116,5 +117,49 @@ class ExecMojoTest {
 
         assertThat(joined).isEqualTo(
             Path.of("/deps/a.jar") + File.pathSeparator + Path.of("/deps/b.jar"));
+    }
+
+    @Test
+    void effectiveArguments_overridePresent_replacesPomList() {
+        final ExecMojo mojo = new ExecMojo();
+        setField(mojo, "arguments", List.of("pom-arg"));
+        setField(mojo, "argumentsOverride", "task1 task2 --flag");
+
+        assertThat(mojo.effectiveArguments()).containsExactly("task1", "task2", "--flag");
+    }
+
+    @Test
+    void effectiveArguments_noOverride_fallsBackToPomList() {
+        final ExecMojo mojo = new ExecMojo();
+        setField(mojo, "arguments", List.of("pom-arg"));
+
+        assertThat(mojo.effectiveArguments()).containsExactly("pom-arg");
+    }
+
+    @Test
+    void effectiveJvmArgs_overridePresent_replacesPomList() {
+        final ExecMojo mojo = new ExecMojo();
+        setField(mojo, "additionalJvmArgs", List.of("-Xshare:off"));
+        setField(mojo, "additionalJvmArgsOverride", "-ea --enable-preview");
+
+        assertThat(mojo.effectiveJvmArgs()).containsExactly("-ea", "--enable-preview");
+    }
+
+    @Test
+    void effectiveJvmArgs_noOverride_fallsBackToPomList() {
+        final ExecMojo mojo = new ExecMojo();
+        setField(mojo, "additionalJvmArgs", List.of("-Xshare:off"));
+
+        assertThat(mojo.effectiveJvmArgs()).containsExactly("-Xshare:off");
+    }
+
+    private static void setField(final Object target, final String name, final Object value) {
+        try {
+            final Field field = ExecMojo.class.getDeclaredField(name);
+            field.setAccessible(true);
+            field.set(target, value);
+        } catch (final ReflectiveOperationException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
